# offset_poly

./: .pre-commit-config.yaml  .vimrc  .vimspector.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-project.yml
offset_poly/: __init__.py  offset.py  offset_corner.py  prepare_poly.py  vec2_math.py
src/offset_poly/: __init__.py  offset.py  offset_corner.py  prepare_poly.py
tests/: __init__.py  conftest.py  test_offset.py  test_offset_corner.py  test_vec2_math.py
