
[project]
name = "offset_poly"
version = "0.3.3"
description = "offset a polyline or polygon in 2d space"
authors = [{ name = "Shay Hill", email = "shay_public@hotmail.com" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["vec2_math"]

[project.optional-dependencies]
dev = ["commitizen", "pre-commit", "pytest", "tox"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"



[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.3"
tag_format = "$version"
major-version-zero = true
version_files = ["pyproject.toml:^version"]



[tool.isort]
profile = "black"



[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__.py"]

pythonVersion = "3.9"
pythonPlatform = "Any"

typeCheckingMode = "strict"
reportShadowedImports = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
# reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "."
venv = "./venv"
